--- a/client-2/src/app/product/product.component.html
+++ b/client-2/src/app/product/product.component.html
@@ -1,11 +1,11 @@
 <div class="list-group">
-    <a href="#" class="list-group-item list-group-item-action" *ngFor="let item of movies">
+    <a class="list-group-item list-group-item-action" [ngStyle]="{'background-color' : checkBasket(item) ? '#d2eef7' : ''}" *ngFor="let item of movies" (click)="addToBasket(item)">
+
       <div class="d-flex w-100 justify-content-between">
         <h5 class="mb-1">{{item.primaryTitle}} - {{item.startYear}}</h5>
-        
         <small>{{item.titleType}}</small>
       </div>
       <p class="mb-1">Original Title : {{item.originalTitle}}</p>
       <small>Genre : {{item.genres != "\\N" ? item.genres : ""}}</small>
     </a>
-  </div> 
+  </div>
